Modifications on homepage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,20 @@
 <html>
 <head>
   <title>Omrails</title>
+  <%= tag :meta, name: "viewport", content: "width=device-width, initial-scale=1.0" %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="container">
+  <% flash.each do |name, msg|%>
+    <%= content_tag(:div, msg, class: "alert alert-#{name}")%>
+  <% end %>
+  <%= render 'layouts/header' %>
+  <%= yield %>
 
-<%= yield %>
-
+  <%= render 'layouts/footer' %>
+</div>
 </body>
 </html>
