--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= render 'layouts/header' %>
+  <div class="filler"></div>
 <div class="container">
   <% flash.each do |name, msg|%>
     <%= content_tag(:div, msg, class: "alert alert-#{name}")%>
   <% end %>
-  <%= render 'layouts/header' %>
+  
   <%= yield %>
 
   <%= render 'layouts/footer' %>
