--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,19 +7,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>-->
-      <a class="brand" href="https://trello.com/"><img src="/assets/trello-logo.png"></a>
+      <a class="brand" href="https://trello.com/"><img src="/assets/trello-logo.png"><span>Dashboard</span></a>
 
       <div class="user-nav">
         <ul class="right">
-        	<li><%= link_to "Sign Up", new_user_registration_path %></li>
         	<% if user_signed_in? %>
             <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
             <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
           <% else %>
             <li><%= link_to "Login", new_user_session_path %></li>
+            <li><%= link_to "Sign Up", new_user_registration_path %></li>
           <% end %>
         </ul>
-      </div><!--/nav-collapse-->
+      </div><!--/user-nav-->
     </div>
   </div><!--navbar-inner-->
 </div><!--/navbar-->
