Add Association to user between cards

--- a/app/assets/stylesheets/cards.css.scss
+++ b/app/assets/stylesheets/cards.css.scss
@@ -1,17 +1,10 @@
-.card{
-  .card-container{
-    margin: auto;
-    width: 940px;
+.hero{
+  padding-bottom: 50px;
+  h1{
 
-    .inner-card{
-      h2{
-        border-bottom: 1px solid #222;
-        padding-bottom: 5px;
-      }
+  }
 
-      p{
+  table{
 
-      }
-    }//inner-card
-  }//card-container
-}//card
+  }
+}//hero
