--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -125,19 +125,44 @@ body{
   font-size: 15px;
   overflow: hidden;
   font-family: 'Forum',serif;
+  background-color: #FEFEFA;
+  -webkit-box-shadow: 0 8px 6px -6px #3B3C36;
+    -moz-box-shadow: 0 8px 6px -6px #3B3C36;
+      box-shadow: 0 8px 6px -6px #3B3C36;
+  margin-bottom: 50px;
+  padding: 20px;
+  width: 100%;
 
+  .title{
+    border-bottom: 1px solid #222;
+    h1{
+      color: #54301a;
+      padding-bottom: 5px;
+    }
+  }//title
+  
   .hero{
     padding-left: 10px;
     float: left;
 
-    h1{
-      color: #54301a;
-      font-size: 18px;
-    }
+    
 
     p{
-
+      
     }
+
+    .links{
+      display: inline-block;
+      padding-top: 30px !important;
+      .btn{
+        margin-right: 10px;
+        padding: 10px;
+        font-size: 18px;
+        
+      }
+    }
+
+    
   }//hero
 }//homepage
 
