--- a/app/views/cards/_card.html.erb
+++ b/app/views/cards/_card.html.erb
@@ -1,6 +1,18 @@
 <tr>
+  <td><%= card.name %></td>
   <td><%= card.description %></td>
-  <td><%= link_to 'Show', card %></td>
-  <td><%= link_to 'Edit', edit_card_path(card) %></td>
-  <td><%= link_to 'Delete', card, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <% if current_user == card.user %>
+    <td>
+      <div class="btn-group">
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Action <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" role="menu">
+          <li><%= link_to 'Show', card %></li>
+          <li><%= link_to 'Edit', edit_card_path(card) %></li>
+          <li><%= link_to 'Delete', card, method: :delete, data: { confirm: 'Are you sure?'}%></li>
+        </ul>
+      </div>
+    </td>
+  <% end %>
 </tr>
+
