--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -1,9 +1,12 @@
 <%= simple_form_for(@card, html:{class:"form-horizontal"}) do |f| %>
   <%= f.error_notification %>
+  <%= f.full_error :image_file_size, class: "alert alert-error"%>
+  <%= f.full_error :image_content_type, class: "alert alert-error"%>
 
   <div class="form-inputs">
   	<%= f.input :name %>
     <%= f.input :description, as: :text, input_html: {rows: "3"} %>
+    <%= f.input :image, label: "Upload a background image (optional)" %>
   </div>
 
   <div class="form-actions">
