--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -7,8 +7,8 @@
       <tr>
         <th>Name</th>
         <th>Description</th>
+        <th>Uploaded Image (Optional)</th>
         <th>Action</th>
-        <th></th>
       </tr>
     </thead>
 
