--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,4 @@
+<div class="clearfix"></div>
 <footer>
   <p><%= link_to "One Month Rails", "http://onemonthrails.com"%> by Mattan Griffel</p>
 </footer>
