--- a/app/views/cards/_card.html.erb
+++ b/app/views/cards/_card.html.erb
@@ -1,25 +1,30 @@
-<tr>
-  <td><%= card.name %></td>
-  <td><%= card.description %></td>
-  <% if card.image.blank? && current_user == card.user %>
-    <td><%= file_field_tag :image, label: "Upload image" %></td>
-  <% elsif card.image.blank? %>
-    <td></td>
+<div class="box">
+  <h2><%= link_to (card.name), card %></h2>
+  <p><%= card.description %></p>
+  <% if card.image.blank? %>
+    <p></p>    
   <% else %>
-     <td><%= image_tag card.image.url(:thumb) %></td>
+     <%= link_to (image_tag card.image.url(:medium)), card %>
   <% end %>
+
+
   <% if current_user == card.user %>
-    <td>
-      <div class="btn-group">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Action <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" role="menu">
-          <li><%= link_to 'Show', card %></li>
-          <li><%= link_to 'Edit', edit_card_path(card) %></li>
-          <li><%= link_to 'Delete', card, method: :delete, data: { confirm: 'Are you sure?'}%></li>
-        </ul>
-      </div>
-    </td>
+    <div class="btn-group">
+      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Action <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" role="menu">
+        <li><%= link_to 'Show', card %></li>
+        <li><%= link_to 'Edit', edit_card_path(card) %></li>
+        <li><%= link_to 'Delete', card, method: :delete, data: { confirm: 'Are you sure?'}%></li>
+      </ul>
+    </div>
   <% end %>
-</tr>
+</div><!--/box-->
+
+
+
+
+
+ 
+
 
