--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,23 +1,9 @@
-
-<div class="hero">
-  <h1>List of Cards</h1>
-
-  <table class= "table table-striped">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Uploaded Image (Optional)</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <%= render @cards %>
-    </tbody>
-  </table>
-<br />
-
-<%= link_to 'New Card', new_card_path, class:"btn btn-primary" %>
-
+<div id="cards">
+  <%= render @cards %>
 </div>
+
+
+
+
+
+
