--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,6 +1,24 @@
 <div id="cards">
-  <%= render @cards %>
+  <%#= render @cards %>
+  <%= link_to"Create New Card", new_card_path, class: "btn btn-info" %>
 </div>
+
+<div id="loggedout">
+    <a id="connectLink" href="#">Connect To Trello</a>
+</div>
+
+<div id="loggedin">
+    <div id="header">
+        Logged in to as <span id="fullName"></span> 
+        <a id="disconnect" href="#">Log Out</a>
+    </div>
+    
+    <div id="output"></div>
+</div>  
+
+
+
+
 
 
 
