--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,26 +1,31 @@
 <div id="homepage">
   <div class="container">
     <div class="title">
-      <h1>Welcome to Trello Dashboard</h1>
+      <h1>Welcome to Customized Dashboard</h1>
     </div>
     <div class="hero">
-      <div class="header">
-        
-        <h4>You will find customized Trello list here just for you!</h4>
-        
+      <div class="customized-option">
+        <label>Create your own customized list:</label>
         <div class="links">
         <% if user_signed_in?%>
           <%= link_to"Go To Your Cards", cards_path, class: "btn btn-primary" %>
           <%= link_to"Create New Card", new_card_path, class: "btn btn-info" %>
         <% else %>
-          <%= link_to"Sign Up",new_user_registration_path, class: "btn btn-primary" %>
-          <%= link_to "Login", new_user_session_path, class: "btn btn-info" %>
-          
+          <%= link_to"Sign Up for Custom Dashboard",new_user_registration_path, class: "btn btn-primary" %>
+          <%= link_to "Login to Your Dashboard", new_user_session_path, class: "btn btn-info" %>
         <% end%>
         </div>
+      </div><!--/customized-option-->  
 
-      </div><!--/header-->    
+      <div class="trello-option">
+        <label>Connect to trello:</label>
+        <div class="links">
+        <%= link_to 'Login with Trello', '/auth/trello/', class: "btn btn-info" %>
+        </div>
+      </div><!--/trello-option-->    
     </div><!--/hero-->
+    <div class="clearfix"></div>
+    <div class="faq"><%= link_to "Not sure which to choose? Click here &raquo;".html_safe, about_path %></div>
   </div><!--/container-->
 </div><!--/homepage-->
 
