--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -6,7 +6,7 @@
   <div class="form-inputs">
   	<%= f.input :name %>
     <%= f.input :description, as: :text, input_html: {rows: "3"} %>
-    <%= f.input :image, label: "Upload a background image (optional)" %>
+    <%= f.input :image, label: "Upload a image(optional)" %>
   </div>
 
   <div class="form-actions">
