--- a/app/views/trello/show.html.erb
+++ b/app/views/trello/show.html.erb
@@ -1,68 +1,76 @@
 <div id="loggedout">
-    <a id="connectLink" href="#">Connect To Trello</a>
+  <a id="connectLink" href="#">Connect To Trello</a>
 </div>
 
 <div id="loggedin">
-    <div id="header">
-        Logged in to as <span id="fullName"></span> 
-        <a id="disconnect" href="#">Log Out</a>
-    </div>
+  <div id="header">Logged in to Trello as <span id="fullName"></span> 
+    <a id="disconnect" href="#">Log Out</a>
+  </div>
+
+  <h1>Your Trello Boards</h1>
     
-    <div id="output"></div>
+  <div id="output"></div>
 </div>  
 
 <script>
-var onAuthorize = function() {
-    updateLoggedIn();
-    $("#output").empty();
-    
-    Trello.members.get("me", function(member){
-        $("#fullName").text(member.fullName);
-    
-        var $cards = $("<div>")
-            .text("Loading Cards...")
-            .appendTo("#output");
 
-        // Output a list of all of the cards that the member 
-        // is assigned to
-        Trello.get("members/me/cards", function(cards) {
-            $cards.empty();
-            $.each(cards, function(ix, card) {
-                $("<a>")
-                .attr({href: card.url, target: "trello"})
-                .addClass("card")
-                .text(card.name)
-                .appendTo($cards);
-            });  
-        });
-    });
+$(document).ready(function(){
+  var onAuthorize = function() {
+      updateLoggedIn();
+      $("#output").empty();
+      
+      Trello.members.get("me", function(member){
+          $("#fullName").text(member.fullName);
+      
+          var $boards = $("<ul>")
+              .text("Loading Boards...")
+              .appendTo("#output")
+              .addClass("board-list");
 
-};
+          //Output all the boards by the users
+          Trello.get("members/me/boards", function(boards) {
+              $boards.empty();
+              $.each(boards, function(ix, board) {
+                var $li = $('<li></li>');
+                $li.append($("<a>")
+                .attr({href: board.url, target: "trello"})
+                .addClass("board")
+                .text(board.name));
+                
+                $boards.append($li);
 
-var updateLoggedIn = function() {
-    var isLoggedIn = Trello.authorized();
-    $("#loggedout").toggle(!isLoggedIn);
-    $("#loggedin").toggle(isLoggedIn);        
-};
-    
-var logout = function() {
-    Trello.deauthorize();
-    updateLoggedIn();
-};
-                          
-Trello.authorize({
-    interactive:false,
-    success: onAuthorize
+              });  
+          });
+      });
+
+  };
+
+  var updateLoggedIn = function() {
+      var isLoggedIn = Trello.authorized();
+      $("#loggedout").toggle(!isLoggedIn);
+      $("#loggedin").toggle(isLoggedIn);        
+  };
+      
+  var logout = function() {
+      Trello.deauthorize();
+      updateLoggedIn();
+  };
+                            
+  Trello.authorize({
+      interactive:false,
+      success: onAuthorize
+  });
+
+  $("#connectLink")
+  .click(function(){
+      Trello.authorize({
+          type: "popup",
+          success: onAuthorize
+      })
+  });
+      
+  $("#disconnect").click(logout);
+
 });
-
-$("#connectLink")
-.click(function(){
-    Trello.authorize({
-        type: "popup",
-        success: onAuthorize
-    })
-});
-    
-$("#disconnect").click(logout);
 
 </script>
